--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -134,13 +134,12 @@
         const responseBox = document.getElementById("responseBox");
 
         try {
-            const res = await fetch('http://localhost:3000/api/chat', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ message: userInput })
+            const res = await fetch('https://your-railway-url/api/chat', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ message: userInput })
             });
+
 
             const data = await res.json();
             responseBox.textContent = data.choices[0].message.content;
