--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -134,7 +134,7 @@
         const responseBox = document.getElementById("responseBox");
 
         try {
-            const res = await fetch('https://your-railway-url/api/chat', {
+            const res = await fetch('gptbackend-production-c03d.up.railway.apphttps://gptbackend-production-c03d.up.railway.app/api/chat', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ message: userInput })
