--- a/TagSpeak/TagSpeak.html
+++ b/TagSpeak/TagSpeak.html
@@ -6,7 +6,7 @@
     <title>SELYROS CORE RULES — v1.0</title>
     <link rel="stylesheet" href="/../style.css">
 </head>
-<body class="tagspeak-theme">
+<body>
     <nav class="TabButtons" aria-label="Main navigation">
       <a href="/index.html">About Me</a>
       <a href="/Resume/index.html">Resume</a>
