Update resume, TagSpeak rules, and site styles
Added new resume PDF and updated download link in Resume page. Revised TagSpeak.html with expanded rules, improved formatting, and clearer examples. Enhanced style.css with improved blockquote, code, and mobile styles. Updated 'Most Recent Update' dates across site.

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -90,7 +90,7 @@
 
             <!-- Resume Download -->
             <footer>
-                <a href="/Resume/Saryn_Harris_Resume.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
+                <a href="Saryn Harris Resume 7-12-2025.pdf" class="DownloadButtons">Download My Full Resume Here!</a>
                 <a href="javascript:history.back()" class="DownloadButtons">← Go Back</a>
             </footer>
         </section>
@@ -119,7 +119,7 @@
     </section>
     <footer class="FooterBoxes">
         <p>Site is created and maintained by Saryn Harris.</p>
-        <p>Most Recent Update:7/12/2025</p>
+        <p>Most Recent Update:7/19/2025</p>
     </footer>
 </body>
 </html>
